# criterion2.rs

./: .gitignore  .rustfmt.toml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: renovate.json
.github/workflows/: audit.yml  ci.yaml  release-plz.yml
bencher_compat/: Cargo.toml
bencher_compat/benches/: bencher_example.rs
bencher_compat/src/: lib.rs
benches/: bench_main.rs
benches/benchmarks/: async_measurement_overhead.rs  compare_functions.rs  custom_measurement.rs  external_process.rs  iter_with_large_drop.rs  iter_with_large_setup.rs  iter_with_setup.rs  measurement_overhead.rs  mod.rs  sampling_mode.rs  special_characters.rs  with_inputs.rs
book/: book.toml
book/src/: analysis.md
book/src/user_guide/: known_limitations.md
macro/: Cargo.toml
macro/src/: lib.rs
plot/: Cargo.toml
plot/src/: candlestick.rs  curve.rs  data.rs  errorbar.rs  filledcurve.rs  lib.rs  map.rs
src/: bencher.rs  benchmark.rs  benchmark_group.rs  cli.rs  connection.rs  criterion.rs  csv_report.rs  error.rs  estimate.rs  format.rs  fs.rs  kde.rs  lib.rs  macros.rs  macros_codspeed.rs  macros_private.rs  measurement.rs  profiler.rs  report.rs  routine.rs
src/analysis/: compare.rs  mod.rs
src/codspeed/: bencher.rs  benchmark_group.rs  criterion.rs  mod.rs
src/criterion_plot/: axis.rs  candlestick.rs  curve.rs  data.rs  display.rs  errorbar.rs  filledcurve.rs  grid.rs  key.rs  map.rs  mod.rs  prelude.rs  proxy.rs
src/html/: mod.rs
src/plot/: mod.rs
src/plot/gnuplot_backend/: distributions.rs  iteration_times.rs  mod.rs  pdf.rs  regression.rs  summary.rs  t_test.rs
src/plot/plotters_backend/: distributions.rs  iteration_times.rs  mod.rs  pdf.rs  regression.rs  summary.rs  t_test.rs
src/stats/: mod.rs  rand_util.rs  test.rs  tuple.rs
src/stats/bivariate/: mod.rs  regression.rs  resamples.rs
src/stats/univariate/: mixed.rs  mod.rs  percentiles.rs  resamples.rs  sample.rs
src/stats/univariate/kde/: kernel.rs  mod.rs
src/stats/univariate/outliers/: tukey.rs
tests/: criterion_tests.rs  macros.rs
