[package]
name = "criterion2"
version = "0.6.0" # When bumping: * Update version numbers in the book;
authors = [
  "Boshen <boshenc@gmail.com>",
  "Jorge Aparicio <japaricious@gmail.com>",
  "Brook Heisler <brookheisler@gmail.com>",
]
edition = "2021"

description = "Statistics-driven micro-benchmarking library"
homepage = "https://bheisler.github.io/criterion.rs/book/index.html"
repository = "https://github.com/Boshen/criterion2.rs"
readme = "README.md"
keywords = ["criterion", "benchmark"]
categories = ["development-tools::profiling"]
license = "Apache-2.0 OR MIT"
exclude = ["book/*"]

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false

[dependencies]
anes = "0.2.0"
itertools = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ciborium = "0.2.2"
bpaf = { version = "0.9", default-features = false }
walkdir = "2.5"
tinytemplate = "1.2"
cast = "0.3"
num-traits = { version = "0.2", default-features = false, features = ["std"] }
oorandom = "11.1"
regex = { version = "1.10", default-features = false, features = ["std"] }

# Optional dependencies
rayon = { version = "1.10", optional = true }
csv = { version = "1.3", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
smol = { version = "2.0", default-features = false, optional = true }
tokio = { version = "1.37", default-features = false, features = [
  "rt",
], optional = true }
async-std = { version = "1.12", optional = true }
plotters = { version = "^0.3.5", default-features = false, features = [
  "svg_backend",
  "area_series",
  "line_series",
], optional = true }
codspeed = { version = "2.4.0", optional = true }
colored = { version = "2.1.0", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
approx = "0.5.1"
quickcheck = { version = "1.0", default-features = false }
rand = "0.8"
futures = { version = "0.3", default-features = false, features = ["executor"] }
itertools-num = "0.1"
num-complex = "0.4.5"

[features]
stable = [
  "csv_output",
  "html_reports",
  "async_futures",
  "async_smol",
  "async_tokio",
  "async_std",
]
default = ["rayon", "plotters", "cargo_bench_support"]
codspeed = ["dep:codspeed", "dep:colored"]

# Enable async/await support
async = []

# These features enable built-in support for running async benchmarks on each different async
# runtime.
async_futures = ["futures/executor", "async"]
async_smol = ["smol", "async"]
async_tokio = ["tokio", "async"]
async_std = ["async-std", "async"]

# This feature _currently_ does nothing except disable a warning message, but in 0.4.0 it will be
# required in order to have Criterion.rs generate its own plots (as opposed to using cargo-criterion)
html_reports = []

# This feature _currently_ does nothing except disable a warning message, but in 0.4.0 it will be
# required in order to have Criterion.rs be usable outside of cargo-criterion.
cargo_bench_support = []

# This feature _currently_ does nothing, but in 0.4.0 it will be
# required in order to have Criterion.rs generate CSV files. This feature is deprecated in favor of
# cargo-criterion's --message-format=json option.
csv_output = ["csv"]

# Enable all of the async runtimes for the docs.rs output
[package.metadata.docs.rs]
features = ["async_futures", "async_smol", "async_std", "async_tokio"]
