[package]
name = "criterion2"
version = "2.0.0"
authors = [
  "Boshen <boshenc@gmail.com>",
  "Brook Heisler <brookheisler@gmail.com>",
  "Jorge Aparicio <japaricious@gmail.com>",
]
edition = "2021"

description = "Statistics-driven micro-benchmarking library"
homepage    = "https://bheisler.github.io/criterion.rs/book/index.html"
repository  = "https://github.com/Boshen/criterion2.rs"
readme      = "README.md"
keywords    = ["benchmark", "criterion"]
categories  = ["development-tools::profiling"]
license     = "Apache-2.0 OR MIT"
exclude     = ["book/*"]

[[bench]]
name    = "bench_main"
harness = false

[lib]
name  = "criterion"
bench = false

[dependencies]
anes       = "0.2.0"
serde      = "1.0.217"
serde_json = "1.0.137"
ciborium   = "0.2.2"
bpaf       = { version = "0.9.16", default-features = false }
walkdir    = "2.5"
cast       = "0.3"
num-traits = { version = "0.2.19", default-features = false, features = ["std"] }
oorandom   = "11.1.4"

# Optional dependencies
rayon     = { version = "1.10", optional = true }
futures   = { version = "0.3.31", default-features = false, optional = true }
smol      = { version = "2.0.2", default-features = false, optional = true }
tokio     = { version = "1.43.0", default-features = false, features = ["rt"], optional = true }
async-std = { version = "1.13.0", optional = true }
codspeed  = { version = "2.7.2", optional = true }
colored   = { version = "3.0.0", optional = true }

document-features = { version = "0.2.10", optional = true }

[dev-dependencies]
tempfile   = "3.15.0"
approx     = "0.5.1"
quickcheck = { version = "1.0.3", default-features = false }
rand       = "0.8.5"
futures    = { version = "0.3.31", default-features = false, features = ["executor"] }

[features]
default = ["cargo_bench_support", "rayon"]

stable = ["async_futures", "async_smol", "async_std", "async_tokio"]

## Enables [codspeed](https://codspeed.io)
codspeed = ["dep:codspeed", "dep:colored"]

## Enables async/await support
async = []

## Enables built-in support for running async benchmarks on futures.
async_futures = ["async", "futures/executor"]
## Enables built-in support for running async benchmarks on smol.
async_smol = ["async", "smol"]
## Enables built-in support for running async benchmarks on tokio.
async_tokio = ["async", "tokio"]
## Enables built-in support for running async benchmarks on async-std.
async_std = ["async", "async-std"]

# This feature _currently_ does nothing except disable a warning message, but in 0.4.0 it will be
# required in order to have Criterion.rs be usable outside of cargo-criterion.
cargo_bench_support = []

# Enable all of the async runtimes for the docs.rs output
[package.metadata.docs.rs]
features = ["async_futures", "async_smol", "async_std", "async_tokio"]
